--- a/HotelService/HotelService/pom.xml
+++ b/HotelService/HotelService/pom.xml
@@ -14,7 +14,7 @@
 	<name>hotel</name>
 	<description>Hotel microServic project</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>latest</java.version>
 		<spring-cloud.version>2022.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
