--- a/HotelService/HotelService/src/main/resources/application.properties
+++ b/HotelService/HotelService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8087
 spring.datasource.url=jdbc:mysql://localhost:3306/microservices
 spring.datasource.username=root
-spring.datasource.password=9889180814@Rs
+spring.datasource.password=ROOT
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = true
