--- a/UserService/UserService/src/main/resources/application.yml
+++ b/UserService/UserService/src/main/resources/application.yml
@@ -2,6 +2,48 @@ server:
   port: 8086
 
 spring:
+  application:
+    name: USER-SERVICE
+  config:
+    import:  optional:configserver:http://localhost:8085
+
+# Actuator config
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+
+  endpoint:
+    health:
+      show-details: always
+
+# Resilience config
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      ratingHotelBreaker:
+        registerHealthIndicator: true
+        eventConsumerBufferSize: 10
+        failureRateThreshold: 50
+        minimumNumberOfCalls: 5
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 6s
+        permittedNumberOfCallsInHalfOpenState: 3
+        slidingWindowSize: 10
+        slidingWindowType: COUNT_BASED
+
+  retry:
+    instances:
+      ratingHotelService:
+        max-attempts: 3
+        wait-duration: 5s
+
+#spring:
 #  datasource:
 #    url: jdbc:mysql://localhost:3306/microservices
 #    username: root
@@ -13,11 +55,6 @@ spring:
 #    hibernate:
 #      ddl-auto: update
 #      dialect: org.hibernate.dialect.MySQL5Dialect
-  application:
-    name: USER-SERVICE
-  config:
-    import:  optional:configserver:http://localhost:8085
-
 #    to change profiles
 #  profiles:
 #    active: prod
